--- a/AcmeClient/ClientApp/css/global.css
+++ b/AcmeClient/ClientApp/css/global.css
@@ -4,13 +4,17 @@ body {
     font-family: Calibri;
 }
 
+.flexGrw {
+    flex: 1 1 100%;
+}
+
 label {
     font-weight: normal;
 }
 
 .header {
     width: 100%;
-    height: 4em;
+    height: 5em;
     display: flex;
     flex-direction: row;
     background-color: #2d7086;
@@ -23,7 +27,8 @@ label {
     flex: 1 1 100%;
     overflow: hidden;
     text-align: center;
-    line-height: 4em;
+    line-height: 2.5em;
+    font-size: 2em;
 }
 
 .headerLink:hover {
@@ -43,7 +48,7 @@ label {
         display: flex;
         flex-direction: column;
         margin: 0 auto;
-        max-width: 400px;
+        min-width: 400px;
         font-size: 2em;
         color: #858585;
     }
